# FinancialAuditAgenticSystem

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  FrameworkDoc.md  README.md  docker-compose.test.yml  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt  validate_system.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: bulletproof-ci-cd.yml  ci-cd.yml  optimized-ci-cd.yml
agents/definitions/: audit_agent.py  compliance_agent.py
agents/tools/: financial_analysis.py  risk_assessment.py
backend/: Dockerfile  main.py
backend/api/: routes.py
backend/core/: config.py  dependencies.py  logging.py
backend/database/: duckdb_manager.py
backend/models/: __init__.py  audit_models.py  pydantic_models.py  schemas.py
backend/services/: audit_service.py  compliance_checker.py  document_processor.py  groq_llm_service.py  guardrails_service.py  mcp_integration.py  observability_service.py  rl_anomaly_detector.py  statistical_analysis.py  statistical_analyzer.py  statistical_integration.py  statistical_utils.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_audit_workflow.py
backend/tests/performance/: test_load.py
backend/tests/unit/: test_statistical_analyzer.py
backend/utils/: benford_law.py  risk_calculator.py
backend/workflows/: __init__.py  audit_workflow.py  nodes.py
config/: statistical_config.py
config/environments/: development.py
config/langraph/: checkpoint.py
config/monitoring/: alert_rules.yml  prometheus.yml
config/opentelemetry/: telemetry_config.py
config/otel/: otel-collector.yml  otel-config.yml
config/redis/: redis.conf  redis_config.py
config/security/: bandit.yml
data/: financial_audit.duckdb
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/pages/: health.js
frontend/pages/api/: health.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuditDashboard.tsx  AuditProgress.tsx  DocumentUpload.tsx  FinancialMetrics.tsx  MCPInterventionModal.tsx  RiskScoreIndicator.tsx  Sidebar.tsx  StatisticalDashboard.tsx  TransactionGraph.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
memory/agents/: README.md
memory/sessions/: README.md
ml/models/: anomaly_detection_model.py  fraud_detection_model.py
ml/training/: trainer.py
scripts/: dependency_monitor.py  fix_dependencies.py  pipeline_performance_optimizer.py  update_dependencies.py  validate_dependencies.py
security/guardrails/: security_guardrails.py
security/policies/: security_policies.py
tests/: conftest.py  quick_validation.py  simple_test.py  test_agent_init.py  test_core_only.py  test_document_processor.py  test_enhanced_document_processor.py  test_statistical_analysis.py  validate_groq_migration.py
tests/performance/: locust.conf  locustfile.py
tests/unit/: test_agents.py
(+3 files in other folders)
