[project]
name = "financialauditagenticsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.0.0",
    "cffi>=2.0.0",
    "cryptography>=46.0.1",
    "duckdb>=1.1.3",
    "fastapi>=0.116.2",
    "joblib>=1.3.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langextract>=1.0.9",
    "langgraph>=0.6.7",
    "matplotlib",
    "numpy>=2.3.3",
    "openai>=1.108.0",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.8",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "rich>=14.1.0",
    "scikit-learn",
    "scipy",
    "seaborn",
    "stable-baselines3>=2.7.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "bandit[toml]>=1.8.0",
    "safety>=3.2.0",
    "semgrep>=1.76.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "safety>=3.2.11",
    "semgrep>=1.79.0",
]
